test/import/fixtures/k8s-manifest/multiline-args.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: bitnami/nginx:latest
        command:
          - /bin/bash
        args:
          - -ec
          - |
            #!/bin/bash
            . /opt/bitnami/scripts/libfs.sh
            # We copy the logs folder because it has symlinks to stdout and stderr
            if ! is_dir_empty /opt/bitnami/nginx/logs; then
              cp -r /opt/bitnami/nginx/logs /emptydir/app-logs-dir
            fi
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
