test/import/fixtures/k8s-manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cert-manager-approver-policy
    app.kubernetes.io/instance: cert-manager-approver-policy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cert-manager-approver-policy
    app.kubernetes.io/version: v0.19.0
    helm.sh/chart: cert-manager-approver-policy-v0.19.0
  name: cert-manager-approver-policy-metrics
  namespace: cert-manager-system
spec:
  ports:
    - name: metrics
      port: 9402
      protocol: TCP
      targetPort: 9402
  selector:
    app: cert-manager-approver-policy
  type: ClusterIP
